Fixed text overflow on music player and search results

--- a/server/dev/css/sidebar2.css
+++ b/server/dev/css/sidebar2.css
@@ -52,7 +52,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-    width: 70%;
+    width: 10rem;
     }
 
   .unfold{
